[ci] Fix all error prone warnings